# git-worktree-cli

./: Cargo.toml  rust-toolchain.toml
git-cli-skim/: git-cli-skim
src/: main.rs
src/cli/: add.rs  change_branch.rs  completions.rs  mod.rs
src/utils/: mod.rs
src/utils/cli/: mod.rs
src/utils/git/: branch.rs  commit.rs  common.rs  fetch.rs  mod.rs  worktree.rs
src/utils/github/: common.rs  mod.rs  pr.rs
src/utils/search/: common.rs
