[package]
name = "git-worktree-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
skim = "0.10.4"
git2 = "0.19.0"
exitcode = "1.1.2"
indexmap = "2.4.0"
clap = {version = "4.5.16", features = ["derive"]}
clap_complete = "4.5.24"
octocrab = "0.39.0"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.86"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
futures = "0.3.30"
